kubernetes/VirtualServices/frontend-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: istio-system
spec:
  hosts:
  - pip.homelabamplifier.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: frontend.default.svc.cluster.local
        port:
          number: 3000
    timeout: 30s
