kubernetes/VirtualServices/grafana-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: istio-system
spec:
  hosts:
  - grafana.piplib.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: kube-prom-stack-grafana.observability.svc.cluster.local
        port:
          number: 80
    timeout: 30s
