kubernetes/VirtualServices/kiali-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kaili-virtual-service
  namespace: istio-system
spec:
  hosts:
  - kiali.homelabamplifier.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
    timeout: 30s
