kubernetes/VirtualServices/playlist-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: playlist-virtual-service
  namespace: istio-system
spec:
  hosts:
  - playlist.homelabamplifier.com
  gateways:
  - piplib-gateway
  http:
  - route:
    - destination:
        host: playlist.default.svc.cluster.local
        port:
          number: 4000
    timeout: 30s
